fix(console): align Import API dialog layout and actions with full-page flow

--- a/gravitee-apim-console-webui/src/management/api/import-v4/api-import-v4-form/api-import-v4-form.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/import-v4/api-import-v4-form/api-import-v4-form.component.scss
@@ -1,7 +1,10 @@
+@use 'sass:map';
 @use '@angular/material/index' as mat;
 @use '@gravitee/ui-particles-angular/index' as gio;
 
 @use '../../../../scss/gio-layout' as gio-layout;
+
+$typography: map.get(gio.$mat-theme, typography);
 
 @mixin stepper-actions-right {
   display: flex;
@@ -21,8 +24,31 @@
   padding-right: 0;
 }
 
+.import-api-v4-form__dialog-heading {
+  margin: 0 0 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 4px;
+}
+
+.import-api-v4-form__dialog-heading-api-name {
+  margin: 0;
+  font-weight: 400;
+  @include mat.m2-typography-level($typography, body-2);
+  color: mat.m2-get-color-from-palette(gio.$mat-dove-palette, darker60);
+}
+
+.import-api-v4-form__dialog-stepper-wrap {
+  min-height: 0;
+}
+
 .api-import-v4-form {
   display: block;
+}
+
+:host(.api-import-v4-form--embedded-dialog) .import-api-v4-form__dialog-heading .page-header__page-title {
+  color: var(--mat-sys-on-surface, #{mat.m2-get-color-from-palette(gio.$mat-space-palette, 'darker')});
 }
 
 .select-api-format {
@@ -83,6 +109,7 @@
     flex-direction: column;
     min-width: 0;
     min-height: 100%;
+    height: 100%;
   }
 
   &__detail-panel {
@@ -96,6 +123,15 @@
   &__detail-panel--remote {
     justify-content: flex-start;
     padding-top: 0;
+  }
+
+  &__detail-panel--file {
+    > api-import-file-picker {
+      display: flex;
+      flex-direction: column;
+      flex: 1;
+      min-height: 0;
+    }
   }
 
   &__field {
